infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: mwatrak1/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-srv
spec:
  selector:
    app: comments
  ports:
  - port: 4001
    name: comments-cluster-ip-srv
    targetPort: 4001
    protocol: TCP
