infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: mwatrak1/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-srv
spec:
  selector:
    app: moderation
  ports:
  - port: 4003
    targetPort: 4003
    protocol: TCP
    name: moderation-cluster-ip-srv
