infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: mwatrak1/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-srv
spec:
  selector:
    app: query
  ports:
  - port: 4002
    name: query-cluster-ip-srv
    targetPort: 4002
    protocol: TCP
